# battery_agent

./: .gitignore
.streamlit/: config.toml
AI-generated Posters/: README.md  main_detail_issue_tags.json  requirements.txt
AI-generated Posters/prompts/: nanfu_ecommerce_main_prompt.txt  reference_prompt.txt
AI-generated Posters/scripts/: call_image_api.py  component_selector.py  copy_selector.py  generate_bad_examples.py  generate_poster.py  parse_pdf_to_copy_library.py
Evaluation_Agent/: checklists.json  notes.txt  qwen3_omni_api.py  qwen3_omni_api_batch.py  qwen3_vlm_api.py  qwen3_vlm_api_batch.py  rename_images_sequential.py  test_typo_detection.py
Labeling Agent/: .env.example  app.py  llm_service.py  notes.txt  requirements.txt
Labeling Agent/.streamlit/: config.toml
Production_Agent/: README.md  notes.txt  pyproject.toml  workflow.md
Production_Agent/runs/test/artifacts/: task_brief.json
Production_Agent/scripts/: qwen_image_edit_cli.py
Production_Agent/src/production_agent_2/: __init__.py  cli.py  paths.py  schemas.py
Production_Agent/src/production_agent_2/agents/: __init__.py  nodes.py
Production_Agent/src/production_agent_2/graph/: __init__.py  workflow.py
Production_Agent/src/production_agent_2/models/: __init__.py  dashscope.py  model_routing.py  qwen_image.py  qwen_image_edit.py  qwen_text.py
Production_Agent/src/production_agent_2/tools/: __init__.py  assets.py  boards.py  component_library.py  composer.py  io.py  placement_plan.py
Text_Script/scripts/: render_text_layers.py
interface/: app.py  notes.txt  requirements.txt
